--- a/templates/partials/service.hbs
+++ b/templates/partials/service.hbs
@@ -4,11 +4,11 @@
         <p>we give you best quality &excl;</p>
         <div id="container">
 
-        <div class="box box1"><i class="fab fa-artstation one"></i><h2>web devlopment</h2></div>
-        <div class="box box2"><i class="fas fa-atom two"></i><h2>ios devlopment</h2></div>
-        <div class="box box3"><i class="fab fa-galactic-republic three"></i><h2>android devlopment</h2></div>
-        <div class="box box4"><i class="far fa-user-astronaut for"></i><h2>react devlopment</h2></div>
-        <div class="box box5"><i class="fal fa-chart-network five"></i><h2>angular devlopment</h2></div>
-        <div class="box box6"><i class="fas fa-eclipse six"></i><h2>backend devlopment</h2></div>
+        <div class="box box1"><i class="far fa-code one"></i><h2>web devlopment</h2></div>
+        <div class="box box2"><i class="fab fa-app-store-ios two"></i><h2>ios devlopment</h2></div>
+        <div class="box box3"><i class="fab fa-android three"></i><h2>android devlopment</h2></div>
+        <div class="box box4"><i class="fab fa-react four"></i><h2>react devlopment</h2></div>
+        <div class="box box5"><i class="fab fa-angular five"></i><h2>angular devlopment</h2></div>
+        <div class="box box6"><i class="fab fa-bootstrap six"></i><h2>bootstrap devlopment</h2></div>
         </div>
     </div>
