--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,7 +13,7 @@
     
     <div id="hero">
         <div id="left">
-            <h1>welcome to madhvik teck</h1>
+            <h1>welcome to madhvik tech</h1>
             <div id="para">
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quis impedit perspiciatis ex earum iusto eveniet ea corrupti!</p>
@@ -28,7 +28,8 @@
         </div>
     </div>
     {{>service}}
-    {{>location}}
     {{>about}}
+    {{>contact}}
+    {{>footer}}
 </body>
 </html>
