slot boking facility

--- a/templates/partials/about.hbs
+++ b/templates/partials/about.hbs
@@ -11,8 +11,10 @@
          
             <div id="btns2">
 
-            <input type="button" value="book appoinment.." id="btn" class="btn1">
-            <input type="button" value="online meeting.." id="btn" class="btn2">            </div>
+                <a href="/book"><input type="button" value="book appoinment.." id="btn" class="btn1 bk"></a>
+            
+            <input type="button" value="online meeting.." id="btn" class="btn2">        
+        </div>
         </div>
        
     </div>
