--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,7 +1,7 @@
 <div class="footer">
   <footer>
     <h2><i class="far fa-bring-front"></i>
-      design and develop by Madhvik Bhalani
+      design and developed by Madhvik Bhalani
       <i class="far fa-bring-front"></i></h2>
   </footer>
 </div>
